# docrag

./: .dockerignore  .env.example  .gitignore  DocRAG-Project-Spec.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/eval/: qa.json
data/sample/: nimbus-faq.md  nimbus-overview.md  onboarding-guide.md
docs/: architecture.mmd
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: docrag.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: eval.py
src/docrag/: __init__.py  config.py  factory.py  models.py
src/docrag/api/: __init__.py  deps.py  main.py  schemas.py
src/docrag/embeddings/: __init__.py  base.py  local.py  openai.py
src/docrag/eval/: __init__.py  dataset.py  harness.py  metrics.py
src/docrag/ingestion/: __init__.py  chunker.py  loaders.py  service.py
src/docrag/llm/: __init__.py  base.py  ollama.py  openai.py
src/docrag/observability/: __init__.py  logging.py  metrics.py
src/docrag/rag/: __init__.py  fusion.py  pipeline.py  prompt.py  rerank.py  retriever.py
src/docrag/vectorstore/: __init__.py  base.py  faiss_store.py
tests/: conftest.py  test_api.py  test_chunker.py  test_eval.py  test_hybrid.py  test_pipeline.py  test_retriever.py
ui/: app.py
