[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docrag"
version = "0.1.0"
description = "DocRAG — Document Intelligence Platform (RAG) with pluggable vector stores and LLM providers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sai Kiran Reddy Surabhi" }]
keywords = ["rag", "llm", "embeddings", "fastapi", "langchain", "faiss", "vector-search"]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "openai>=1.40",
    "tiktoken>=0.7",
    "pypdf>=4.2",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "streamlit>=1.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]
eval = [
    "ragas>=0.1.9",
    "datasets>=2.19",
]
observability = [
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.urls]
Repository = "https://github.com/your-handle/docrag"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
